--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,4 +4,11 @@
 	{% for post in posts %}
 	<div><p>{{ post.author.nickname }} diz: <b>{{ post.body }}</b></p></div>
 	{% endfor %}
+	<hr>
+	<form method='GET'>
+	Adicionar um novo post: <br />
+	Nome: <input type='text' name='name' value=''><br />
+	Post: <input type='textarea' name='post'><br/><br/>
+	<input type='submit' name='submit' value='Postar!'>
+	</form>
 {% endblock %}
