--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<div>Microblog: <a href="{{ url_for('index') }}">Home</a>
-		| <a href="{{ url_for('sign') }}">Cadastro</a> 
+		| <a href="{{ url_for('sign') }}">Cadastro</a>
+		| <a href="{{ url_for('login') }}">Login</a> 
 		<hr>
 		{% with messages = get_flashed_messages() %}
 			{% if messages %}
