--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 	<h1>Login</h1>
-	<form action='/signup' method='POST'>
+	<form action='/login' method='POST'>
 	E-mail:<input type='text' name='email'><br />
 	Senha:<input type='password' name='pword'><br /><br />
-	<input type='submit' name='signup' value='Logar!'>
+	<input type='submit' name='log' value='Logar!'>
 	</form>
 {% endblock %}
