--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,8 @@
 	<body>
 		<div>Microblog: <a href="{{ url_for('index') }}">Home</a>
 		| <a href="{{ url_for('sign') }}">Cadastro</a>
-		| <a href="{{ url_for('login') }}">Login</a> 
+		| <a href="{{ url_for('login') }}">Login</a>
+		| <a href="{{ url_for('logout') }}">Logout</a> 
 		<hr>
 		{% with messages = get_flashed_messages() %}
 			{% if messages %}
