--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang = "pt-br">
 	<head>
-	<title>Microblog 0.4</title>
+	<title>{{ title }}</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		<div><small>Microblog:</small> <a href="{{ url_for('index') }}">Home</a>
+		<div>Microblog: <a href="{{ url_for('index') }}">Home</a>
 		| <a href="{{ url_for('sign') }}">Cadastro</a>
 		| <a href="{{ url_for('logout') }}">Logout</a>
 		| <a href="{{ url_for('login') }}">Login</a>
