--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -9,7 +9,7 @@
 				E-mail:<input type='text' class='form-control' name='email'><br />
 				Senha:<input type='password' class='form-control' name='pword'><br /><br />
 			</div>
-			<input type='submit' name='signup' value='Cadastrar!'>
+			<input type='submit' name='signup' class='btn btn-success' value='Cadastrar!'>
 			</form>
 		</div>
 	</div>
