--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,12 +7,13 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	</head>
-	<body>
-		<div>Microblog: <a href="{{ url_for('index') }}">Home</a>
-		| <a href="{{ url_for('sign') }}">Cadastro</a>
-		| <a href="{{ url_for('logout') }}">Logout</a>
-		| <a href="{{ url_for('login') }}">Login</a>
-		<hr>
+	<body> 
+		<div class='btn-group'><a class='btn btn-primary' href="{{ url_for('index') }}">Home</a>
+		<a class='btn btn-primary' href="{{ url_for('sign') }}">Cadastro</a>
+		<a class='btn btn-primary' href="{{ url_for('logout') }}">Logout</a>
+		<a class='btn btn-primary' href="{{ url_for('login') }}">Login</a>
+	</div>
+		<span class='pull-right'><h6>Bem-vindo!</h6></span>
 		{% with messages = get_flashed_messages() %}
 			{% if messages %}
 				<ul>
