--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 	<div class='container'>
 		<div class='row'>
-			<div class='col-md-4'>
+			<div class='col-md-4'><span class='pull-left'>
 				<h4>Login</h4>
 				<form action='/login' method='POST'>
 				<div class='form-group'>
@@ -11,9 +11,9 @@
 				<div class='form-group'>
 					Senha:<input type='password' class='form-control' name='pword'><br /><br />
 				</div>
-				<input type='submit' name='log' value='Logar!'>
+				<input type='submit' name='log' class='btn btn-success' value='Logar!'>
 				</form>
-			</div>
+			</div></span>
 		</div>
 	</div>
 {% endblock %}
